--- a/SistemaAsistencias/SistemaAsistencias.csproj
+++ b/SistemaAsistencias/SistemaAsistencias.csproj
@@ -54,22 +54,24 @@
     <Compile Include="Datos\PersonalController.cs" />
     <Compile Include="Datos\UsuarioController.cs" />
     <Compile Include="Logica\AsistenciasModel.cs" />
-    <Compile Include="Logica\AsistenteInstalacion\ConexionRemota.cs">
+    <Compile Include="Logica\Desencryptacion.cs" />
+    <Compile Include="Logica\Encryptacion.cs" />
+    <Compile Include="Presentacion\AsistenteInstalacion\ConexionRemota.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Logica\AsistenteInstalacion\ConexionRemota.Designer.cs">
+    <Compile Include="Presentacion\AsistenteInstalacion\ConexionRemota.Designer.cs">
       <DependentUpon>ConexionRemota.cs</DependentUpon>
     </Compile>
-    <Compile Include="Logica\AsistenteInstalacion\EleccionServidor.cs">
+    <Compile Include="Presentacion\AsistenteInstalacion\EleccionServidor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Logica\AsistenteInstalacion\EleccionServidor.Designer.cs">
+    <Compile Include="Presentacion\AsistenteInstalacion\EleccionServidor.Designer.cs">
       <DependentUpon>EleccionServidor.cs</DependentUpon>
     </Compile>
-    <Compile Include="Logica\AsistenteInstalacion\InstalacionDB.cs">
+    <Compile Include="Presentacion\AsistenteInstalacion\InstalacionDB.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Logica\AsistenteInstalacion\InstalacionDB.Designer.cs">
+    <Compile Include="Presentacion\AsistenteInstalacion\InstalacionDB.Designer.cs">
       <DependentUpon>InstalacionDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Logica\Bases.cs" />
@@ -78,6 +80,12 @@
     <Compile Include="Logica\PermisosModel.cs" />
     <Compile Include="Logica\Personal.cs" />
     <Compile Include="Logica\UsuarioModel.cs" />
+    <Compile Include="Presentacion\AsistenteInstalacion\UsuarioPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\AsistenteInstalacion\UsuarioPrincipal.Designer.cs">
+      <DependentUpon>UsuarioPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\ControlUsuario.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -110,10 +118,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Logica\AsistenteInstalacion\EleccionServidor.resx">
+    <EmbeddedResource Include="Presentacion\AsistenteInstalacion\EleccionServidor.resx">
       <DependentUpon>EleccionServidor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Logica\AsistenteInstalacion\InstalacionDB.resx">
+    <EmbeddedResource Include="Presentacion\AsistenteInstalacion\InstalacionDB.resx">
       <DependentUpon>InstalacionDB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\ControlUsuario.resx">
