--- a/SistemaAsistencias/SistemaAsistencias.csproj
+++ b/SistemaAsistencias/SistemaAsistencias.csproj
@@ -44,16 +44,24 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Telerik.Reporting, Version=14.1.20.618, Culture=neutral, PublicKeyToken=a9d7983dfcc261be">
+      <SpecificVersion>True</SpecificVersion>
+    </Reference>
+    <Reference Include="Telerik.ReportViewer.WinForms, Version=14.1.20.618, Culture=neutral, PublicKeyToken=a9d7983dfcc261be">
+      <SpecificVersion>True</SpecificVersion>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datos\AsistenciasController.cs" />
     <Compile Include="Datos\CargoController.cs" />
     <Compile Include="Datos\ConexionMaestraController.cs" />
+    <Compile Include="Datos\CopiasController.cs" />
     <Compile Include="Datos\ModulosController.cs" />
     <Compile Include="Datos\PermisosController.cs" />
     <Compile Include="Datos\PersonalController.cs" />
     <Compile Include="Datos\UsuarioController.cs" />
     <Compile Include="Logica\AsistenciasModel.cs" />
+    <Compile Include="Logica\CopiasModel.cs" />
     <Compile Include="Logica\Desencryptacion.cs" />
     <Compile Include="Logica\Encryptacion.cs" />
     <Compile Include="Presentacion\AsistenteInstalacion\ConexionRemota.cs">
@@ -92,6 +100,12 @@
     <Compile Include="Presentacion\ControlUsuario.Designer.cs">
       <DependentUpon>ControlUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentacion\CopiasDB.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Presentacion\CopiasDB.Designer.cs">
+      <DependentUpon>CopiasDB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +123,18 @@
     </Compile>
     <Compile Include="Presentacion\Personal.Designer.cs">
       <DependentUpon>Personal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\Preplanilla.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Preplanilla.Designer.cs">
+      <DependentUpon>Preplanilla.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\Reportes\ReportAsistencias.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Reportes\ReportAsistencias.Designer.cs">
+      <DependentUpon>ReportAsistencias.cs</DependentUpon>
     </Compile>
     <Compile Include="Presentacion\TomarAsistencias.cs">
       <SubType>Form</SubType>
@@ -130,6 +156,9 @@
     <EmbeddedResource Include="Presentacion\ControlUsuario.resx">
       <DependentUpon>ControlUsuario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\CopiasDB.resx">
+      <DependentUpon>CopiasDB.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -139,9 +168,16 @@
     <EmbeddedResource Include="Presentacion\Personal.resx">
       <DependentUpon>Personal.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\Preplanilla.resx">
+      <DependentUpon>Preplanilla.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\Reportes\ReportAsistencias.resx">
+      <DependentUpon>ReportAsistencias.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\TomarAsistencias.resx">
       <DependentUpon>TomarAsistencias.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -261,5 +297,6 @@
   <ItemGroup>
     <None Include="Resources\subir.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
